--- a/project-1/confrontation.html
+++ b/project-1/confrontation.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>The Confrontation - The Raven</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <h1>The Confrontation with the Raven</h1>
@@ -36,5 +38,7 @@
   </ul>
 
   <p>Continue your journey to <a href="analysis.html">Reflection &amp; Analysis</a>.</p>
+
+  <div id="raven"></div>
 </body>
 </html>
