--- a/project-1/descent.html
+++ b/project-1/descent.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Descent Into Madness - The Raven</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <h1>Descent Into Madness</h1>
@@ -34,5 +36,7 @@
   </ul>
 
   <p>Continue your journey to <a href="confrontation.html">The Confrontation with the Raven</a>.</p>
+
+  <div id="raven"></div>
 </body>
 </html>
