--- a/project-1/index.html
+++ b/project-1/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>The Raven: Interactive Experience</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <h1>Welcome to The Raven: An Interactive Experience</h1>
@@ -24,5 +26,7 @@
   <p>Enjoy your exploration and discover new perspectives on this timeless work!</p>
 
   <p><a href="../index.html">Return to Class Home</a></p> <!-- Alternative standalone link -->
+
+  <div id="raven"></div>
 </body>
 </html>
