--- a/project-1/introduction.html
+++ b/project-1/introduction.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Introduction - The Raven</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <h1>Introduction</h1>
@@ -22,3 +24,5 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="arrival.html">The Arrival</a></li>
     <li><a href="descent.html">Descent Into Madness</a></li>
+
+    <div id="raven"></div>
