--- a/project-1/arrival.html
+++ b/project-1/arrival.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>The Arrival - The Raven</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <h1>The Arrival hey</h1>
@@ -32,5 +34,7 @@
   </ul>
 
   <p>Continue your journey to <a href="descent.html">Descent Into Madness</a>.</p>
+
+  <div id="raven"></div>
 </body>
 </html>
