--- a/project-1/introduction.html
+++ b/project-1/introduction.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Introduction - The Raven</title>
+  <link rel="stylesheet" href="https://use.typekit.net/bvo2kvz.css">
   <link rel="stylesheet" href="style.css">
 
 </head>
